refactor: address 삭제
